      create empty or incomplete files for aborted download requests.

      \item Bandwidth selectors \code{bw.ucv()}, \code{bw.bcv()} and
      \code{bw.SJ()} now avoid integer overflow for large sample sizes.

      \item \code{str()} no longer shows \code{"list output truncated"},
      in cases that list was not shown at all.  Thanks to Neal Fultz
      (\PR{17219})
    }
  }
}

\section{\Rlogo CHANGES IN R 3.3.2 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Changes when redirection of a \samp{http://} URL to a
      \samp{https://} URL is encountered:
      
      The internal methods of \code{download.file()} and \code{url()}
      now report that they cannot follow this (rather than failing
      silently).

      (Unix-alike) \code{download.file(method = "auto")} (the default)
      re-tries with \code{method = "libcurl"}.

      (Unix-alike) \code{url(method = "default")} with an explicit
      \code{open} argument re-tries with \code{method = "libcurl"}.
      This covers many of the usages, e.g.\sspace{}\code{readLines()}
      with a URL argument.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The \command{configure} check for the \code{zlib} version is
      now robust to versions longer than 5 characters, including
      \code{1.2.10}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item Environmental variable \env{_R_CHECK_TESTS_NLINES_} controls
      how \command{R CMD check} reports failing tests (see §8 of the
      \sQuote{R Internals} manual).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{rep(x, times)} and \code{rep.int(x, times)} now both
      work also when \code{times} is larger than the maximal integer,
      including when it is of length greater than one. (\PR{16932})

      \item \code{vapply(x, *)} now works with long vectors \code{x}.
      (\PR{17174})

      \item \code{isS3method("is.na.data.frame")} and similar are